Do not use RibSupportUtils in PeerTest
Use a plain constant instead of relying on reflection. Also centralize
references to AFI/SAFI QNames.

JIRA: BGPCEP-1016
Change-Id: Ibb4e18ee7f83229386a483a912c0ce49e1ffca0e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>